gcc/testsuite/gdc.test/fail_compilation/protection/subpkg/test2.d
module protection.subpkg.test2;

package(protection.subpkg2) void foo2();
